--- a/stylesheets/mapStyle.css
+++ b/stylesheets/mapStyle.css
@@ -3,8 +3,10 @@
 	height: 50vh;
 	width: 40%;
 	left: calc((100vw - 40%)/2);
+/*	height: 100vh;
+	width: 100vw;*/
 	top: 0px;
-	background: none;
+	background: black;
 	/*animation: expand 1s 1 ease-in;
 	animation-fill-mode: forwards;  */
 	border: 1px white solid;
